1999-11-21  Nick Clifton  <nickc@cygnus.com>

	* objdump.c (usage): Overhaul output:  One line per switch.
	Textual description of each switch.  Distinguish between
	optional switches and required switches.
	(long_options): Add 'g', 'G' and 'z' short options.
	(main): Distinguish between optional switches and required
	switches.

	* binutils.texi: Add -g -G and -z short options for
	--debugging, --stabs and --disassemble-zeroes.

1999-11-03  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c (flush_page): Clip short values to prevent warnings
	from the assembler.
	Change default mcore machine name to 'mcore-le' and rename
	big-endian version to 'mcore-be'. 

1999-10-27  Fred Fish  <fnf@cygnus.com>

	* objdump.c (display_bfd): Break into two functions.  The
	actual dumping code moves to dump_bfd.  If bfd is not
	unambiguously recognized as a bfd_object, attempt to dump
	it as a bfd_core.
	(dump_bfd): New function.

1999-10-26  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c (assemble_file): Remove spurious test of exp_name.

1999-10-22  Nick Clifton  <nickc@cygnus.com>

	* dlltool.c (struct mac): Add new field 'how_default_as_switches'.
	(mtable): Initialise new field.  Some machines have a non empty
	string for this field.
	(HOW_BFD_TARGET): Undefine and replace with...
	(HOW_BFD_READ_TARGET): New macro: bfd target to use when opening a
	file for reading.  This is set to 0 so that any recognisable bfd
	format can be read.
	(HOW_BFD_WRITE_TARGET): New macro: bfd target to use when opening
	a file for writing.  This is set to the target machine type.
	(ASM_SWITCHES): New macro: default switches to use when assembling
	a file.
	(assemble_file): New function: Assemble a source file into a
	destination object file.
	(gen_exp_file): Use assemble_file to create the exp file.
	(make_one_lib_file): Use assemble_file to create the lib file.
	Open output file use HOW_BFD_WRITE_TARGET and input files using
	HOW_BFD_READ_TARGET.