@@ -1,3 +1,8 @@
+1999-11-22  Nick Clifton  <nickc@cygnus.com>
+
+	* objcopy.c (copy_usage): Reformat.
+	(strip_usage): Reformat.
+
 1999-11-21  Nick Clifton  <nickc@cygnus.com>
 
 	* objdump.c (usage): Overhaul output:  One line per switch.
